--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1161,6 +1161,10 @@ input::placeholder {
   z-index: 10;
 }
 
+.col-span-4 {
+  grid-column: span 4 / span 4;
+}
+
 .m-auto {
   margin: auto;
 }
@@ -1200,11 +1204,6 @@ input::placeholder {
   margin-bottom: 0.25rem;
 }
 
-.my-24 {
-  margin-top: 6rem;
-  margin-bottom: 6rem;
-}
-
 .mt-4 {
   margin-top: 1rem;
 }
@@ -1217,20 +1216,20 @@ input::placeholder {
   margin-top: 0.5rem;
 }
 
-.mt-14 {
-  margin-top: 3.5rem;
+.mt-28 {
+  margin-top: 7rem;
 }
 
-.mt-8 {
-  margin-top: 2rem;
+.mt-24 {
+  margin-top: 6rem;
 }
 
 .mb-0 {
   margin-bottom: 0px;
 }
 
-.mt-12 {
-  margin-top: 3rem;
+.mt-8 {
+  margin-top: 2rem;
 }
 
 .mb-32 {
@@ -1273,8 +1272,24 @@ input::placeholder {
   margin-bottom: auto;
 }
 
-.mb-12 {
-  margin-bottom: 3rem;
+.ml-0 {
+  margin-left: 0px;
+}
+
+.mt-16 {
+  margin-top: 4rem;
+}
+
+.mr-2 {
+  margin-right: 0.5rem;
+}
+
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
+.mr-3 {
+  margin-right: 0.75rem;
 }
 
 .mt-3 {
@@ -1289,12 +1304,12 @@ input::placeholder {
   margin-top: 0px;
 }
 
-.mr-2 {
-  margin-right: 0.5rem;
-}
-
 .ml-3 {
   margin-left: 0.75rem;
+}
+
+.mb-1 {
+  margin-bottom: 0.25rem;
 }
 
 .mr-4 {
@@ -1303,34 +1318,6 @@ input::placeholder {
 
 .mb-6 {
   margin-bottom: 1.5rem;
-}
-
-.mt-28 {
-  margin-top: 7rem;
-}
-
-.mt-16 {
-  margin-top: 4rem;
-}
-
-.mt-32 {
-  margin-top: 8rem;
-}
-
-.mt-24 {
-  margin-top: 6rem;
-}
-
-.mb-24 {
-  margin-bottom: 6rem;
-}
-
-.mb-8 {
-  margin-bottom: 2rem;
-}
-
-.ml-0 {
-  margin-left: 0px;
 }
 
 .block {
@@ -1447,6 +1434,14 @@ input::placeholder {
   width: 24rem;
 }
 
+.w-1\/3 {
+  width: 33.333333%;
+}
+
+.w-6 {
+  width: 1.5rem;
+}
+
 .w-screen {
   width: 100vw;
 }
@@ -1529,6 +1524,35 @@ input::placeholder {
 
 .flex-grow {
   flex-grow: 1;
+}
+
+.table-fixed {
+  table-layout: fixed;
+}
+
+.border-collapse {
+  border-collapse: collapse;
+}
+
+.border-spacing-0 {
+  --tw-border-spacing-x: 0px;
+  --tw-border-spacing-y: 0px;
+  border-spacing: var(--tw-border-spacing-x) var(--tw-border-spacing-y);
+}
+
+.-translate-y-1\/2 {
+  --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.scale-110 {
+  --tw-scale-x: 1.1;
+  --tw-scale-y: 1.1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.transform {
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 @keyframes fade-in-down {
@@ -1627,6 +1651,14 @@ input::placeholder {
   grid-auto-flow: row;
 }
 
+.grid-flow-col {
+  grid-auto-flow: column;
+}
+
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
@@ -1680,6 +1712,15 @@ input::placeholder {
        column-gap: 2rem;
 }
 
+.gap-x-12 {
+  -moz-column-gap: 3rem;
+       column-gap: 3rem;
+}
+
+.gap-y-12 {
+  row-gap: 3rem;
+}
+
 .gap-x-6 {
   -moz-column-gap: 1.5rem;
        column-gap: 1.5rem;
@@ -1719,6 +1760,21 @@ input::placeholder {
   margin-bottom: calc(2rem * var(--tw-space-y-reverse));
 }
 
+.divide-x > :not([hidden]) ~ :not([hidden]) {
+  --tw-divide-x-reverse: 0;
+  border-right-width: calc(1px * var(--tw-divide-x-reverse));
+  border-left-width: calc(1px * calc(1 - var(--tw-divide-x-reverse)));
+}
+
+.divide-gray-500 > :not([hidden]) ~ :not([hidden]) {
+  --tw-divide-opacity: 1;
+  border-color: rgb(61 36 117 / var(--tw-divide-opacity));
+}
+
+.divide-opacity-50 > :not([hidden]) ~ :not([hidden]) {
+  --tw-divide-opacity: 0.5;
+}
+
 .overflow-hidden {
   overflow: hidden;
 }
@@ -1753,16 +1809,20 @@ input::placeholder {
   border-radius: 0.5rem;
 }
 
-.rounded-md {
-  border-radius: 0.375rem;
+.rounded-2xl {
+  border-radius: 1rem;
+}
+
+.rounded-3xl {
+  border-radius: 1.5rem;
 }
 
 .rounded-full {
   border-radius: 9999px;
 }
 
-.rounded-2xl {
-  border-radius: 1rem;
+.rounded-md {
+  border-radius: 0.375rem;
 }
 
 .rounded-t-md {
@@ -1776,6 +1836,14 @@ input::placeholder {
 
 .border-2 {
   border-width: 2px;
+}
+
+.border-b-0 {
+  border-bottom-width: 0px;
+}
+
+.border-b-1 {
+  border-bottom-width: 1px;
 }
 
 .border-b {
@@ -1836,6 +1904,10 @@ input::placeholder {
   background-color: rgb(9 0 31 / var(--tw-bg-opacity));
 }
 
+.bg-transparent {
+  background-color: transparent;
+}
+
 .bg-gray-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(14 4 38 / var(--tw-bg-opacity));
@@ -1870,10 +1942,6 @@ input::placeholder {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
-.bg-transparent {
-  background-color: transparent;
-}
-
 .bg-opacity-100 {
   --tw-bg-opacity: 1;
 }
@@ -1886,12 +1954,12 @@ input::placeholder {
   --tw-bg-opacity: 0.25;
 }
 
-.bg-auth-splash {
-  background-image: url('/images/signup_splash_edit.png');
-}
-
 .bg-gradient-to-tr {
   background-image: linear-gradient(to top right, var(--tw-gradient-stops));
+}
+
+.bg-auth-splash {
+  background-image: url('/images/signup_splash_edit.png');
 }
 
 .from-primary {
@@ -1995,9 +2063,19 @@ input::placeholder {
   padding-right: 1.25rem;
 }
 
-.py-32 {
-  padding-top: 8rem;
-  padding-bottom: 8rem;
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+}
+
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .px-12 {
@@ -2015,22 +2093,20 @@ input::placeholder {
   padding-right: 0.5rem;
 }
 
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
-
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
 .pb-2 {
   padding-bottom: 0.5rem;
 }
 
 .pt-px {
   padding-top: 1px;
+}
+
+.pt-16 {
+  padding-top: 4rem;
+}
+
+.pb-8 {
+  padding-bottom: 2rem;
 }
 
 .pb-4 {
@@ -2047,6 +2123,18 @@ input::placeholder {
 
 .pb-6 {
   padding-bottom: 1.5rem;
+}
+
+.pt-1 {
+  padding-top: 0.25rem;
+}
+
+.pb-1\.5 {
+  padding-bottom: 0.375rem;
+}
+
+.pb-1 {
+  padding-bottom: 0.25rem;
 }
 
 .pt-8 {
@@ -2075,18 +2163,6 @@ input::placeholder {
 
 .pl-2 {
   padding-left: 0.5rem;
-}
-
-.pt-12 {
-  padding-top: 3rem;
-}
-
-.pb-8 {
-  padding-bottom: 2rem;
-}
-
-.pt-16 {
-  padding-top: 4rem;
 }
 
 .text-left {
@@ -2185,10 +2261,6 @@ input::placeholder {
   line-height: 1.25rem;
 }
 
-.leading-\[4rem\] {
-  line-height: 4rem;
-}
-
 .tracking-tight {
   letter-spacing: -0.025em;
 }
@@ -2226,6 +2298,18 @@ input::placeholder {
   --tw-text-opacity: 0.7;
 }
 
+.text-opacity-50 {
+  --tw-text-opacity: 0.5;
+}
+
+.text-opacity-90 {
+  --tw-text-opacity: 0.9;
+}
+
+.text-opacity-20 {
+  --tw-text-opacity: 0.2;
+}
+
 .text-opacity-80 {
   --tw-text-opacity: 0.8;
 }
@@ -2258,6 +2342,10 @@ input::placeholder {
   opacity: 0.7;
 }
 
+.opacity-60 {
+  opacity: 0.6;
+}
+
 .opacity-30 {
   opacity: 0.3;
 }
@@ -2269,6 +2357,12 @@ input::placeholder {
 .shadow-2xl {
   --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
   --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -2383,6 +2477,10 @@ input::placeholder {
   opacity: 0.9;
 }
 
+.focus\:border-1:focus {
+  border-width: 1px;
+}
+
 .focus\:border-primary:focus {
   --tw-border-opacity: 1;
   border-color: rgb(110 47 255 / var(--tw-border-opacity));
@@ -2416,12 +2514,12 @@ input::placeholder {
     margin-right: auto;
   }
 
-  .sm\:ml-auto {
-    margin-left: auto;
-  }
-
   .sm\:mr-auto {
     margin-right: auto;
+  }
+
+  .sm\:ml-auto {
+    margin-left: auto;
   }
 
   .sm\:flex {
@@ -2463,10 +2561,6 @@ input::placeholder {
     font-size: 1.875rem;
     line-height: 2.25rem;
   }
-
-  .sm\:leading-\[4rem\] {
-    line-height: 4rem;
-  }
 }
 
 @media (min-width: 768px) {
@@ -2483,6 +2577,10 @@ input::placeholder {
   .md\:mx-0 {
     margin-left: 0px;
     margin-right: 0px;
+  }
+
+  .md\:mt-32 {
+    margin-top: 8rem;
   }
 
   .md\:mb-10 {
@@ -2505,10 +2603,6 @@ input::placeholder {
     margin-left: auto;
   }
 
-  .md\:mt-32 {
-    margin-top: 8rem;
-  }
-
   .md\:block {
     display: block;
   }
@@ -2521,12 +2615,12 @@ input::placeholder {
     display: none;
   }
 
-  .md\:h-auto {
-    height: auto;
-  }
-
   .md\:h-screen {
     height: 100vh;
+  }
+
+  .md\:h-auto {
+    height: auto;
   }
 
   .md\:w-1\/2 {
@@ -2660,8 +2754,8 @@ input::placeholder {
     margin-right: auto;
   }
 
-  .lg\:mt-32 {
-    margin-top: 8rem;
+  .lg\:mt-48 {
+    margin-top: 12rem;
   }
 
   .lg\:mb-8 {
@@ -2686,10 +2780,6 @@ input::placeholder {
 
   .lg\:mb-0 {
     margin-bottom: 0px;
-  }
-
-  .lg\:mt-48 {
-    margin-top: 12rem;
   }
 
   .lg\:flex {
