--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1231,28 +1231,16 @@ input::placeholder {
   margin-top: 7rem;
 }
 
-.mt-24 {
-  margin-top: 6rem;
-}
-
-.mb-0 {
-  margin-bottom: 0px;
-}
-
-.mt-8 {
-  margin-top: 2rem;
-}
-
-.mb-32 {
-  margin-bottom: 8rem;
-}
-
 .ml-2 {
   margin-left: 0.5rem;
 }
 
 .mr-auto {
   margin-right: auto;
+}
+
+.mt-8 {
+  margin-top: 2rem;
 }
 
 .mb-4 {
@@ -1271,12 +1259,20 @@ input::placeholder {
   margin-top: auto;
 }
 
-.ml-4 {
-  margin-left: 1rem;
-}
-
 .ml-auto {
   margin-left: auto;
+}
+
+.mt-24 {
+  margin-top: 6rem;
+}
+
+.mb-0 {
+  margin-bottom: 0px;
+}
+
+.mb-32 {
+  margin-bottom: 8rem;
 }
 
 .mb-auto {
@@ -1301,6 +1297,10 @@ input::placeholder {
 
 .mt-3 {
   margin-top: 0.75rem;
+}
+
+.ml-4 {
+  margin-left: 1rem;
 }
 
 .mt-0\.5 {
@@ -1363,12 +1363,12 @@ input::placeholder {
   height: 100%;
 }
 
-.h-auto {
-  height: auto;
-}
-
 .h-4 {
   height: 1rem;
+}
+
+.h-auto {
+  height: auto;
 }
 
 .h-6 {
@@ -1377,15 +1377,6 @@ input::placeholder {
 
 .h-px {
   height: 1px;
-}
-
-.h-screen {
-  height: 100vh;
-}
-
-.h-max {
-  height: -moz-max-content;
-  height: max-content;
 }
 
 .h-48 {
@@ -1402,6 +1393,15 @@ input::placeholder {
 
 .h-3 {
   height: 0.75rem;
+}
+
+.h-max {
+  height: -moz-max-content;
+  height: max-content;
+}
+
+.h-screen {
+  height: 100vh;
 }
 
 .h-min {
@@ -1450,10 +1450,6 @@ input::placeholder {
   width: 24rem;
 }
 
-.w-screen {
-  width: 100vw;
-}
-
 .w-8 {
   width: 2rem;
 }
@@ -1472,6 +1468,10 @@ input::placeholder {
 
 .w-3 {
   width: 0.75rem;
+}
+
+.w-screen {
+  width: 100vw;
 }
 
 .w-0 {
@@ -1527,12 +1527,12 @@ input::placeholder {
   flex: 1 1 0%;
 }
 
-.flex-shrink {
-  flex-shrink: 1;
-}
-
 .flex-shrink-0 {
   flex-shrink: 0;
+}
+
+.flex-shrink {
+  flex-shrink: 1;
 }
 
 .shrink-0 {
@@ -1758,6 +1758,12 @@ input::placeholder {
   margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
+.space-y-8 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(2rem * var(--tw-space-y-reverse));
+}
+
 .space-y-6 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
@@ -1768,12 +1774,6 @@ input::placeholder {
   --tw-space-y-reverse: 0;
   margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
-}
-
-.space-y-8 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(2rem * var(--tw-space-y-reverse));
 }
 
 .divide-x-1 > :not([hidden]) ~ :not([hidden]) {
@@ -1835,16 +1835,16 @@ input::placeholder {
   border-radius: 0.5rem;
 }
 
+.rounded-full {
+  border-radius: 9999px;
+}
+
 .rounded-2xl {
   border-radius: 1rem;
 }
 
 .rounded-3xl {
   border-radius: 1.5rem;
-}
-
-.rounded-full {
-  border-radius: 9999px;
 }
 
 .rounded-md {
@@ -1944,6 +1944,11 @@ input::placeholder {
   background-color: rgb(21 9 49 / var(--tw-bg-opacity));
 }
 
+.bg-tertiary {
+  --tw-bg-opacity: 1;
+  background-color: rgb(238 47 255 / var(--tw-bg-opacity));
+}
+
 .bg-red-500\/50 {
   background-color: rgb(239 68 68 / 0.5);
 }
@@ -1958,14 +1963,13 @@ input::placeholder {
   background-color: rgb(167 129 254 / var(--tw-bg-opacity));
 }
 
-.bg-tertiary {
-  --tw-bg-opacity: 1;
-  background-color: rgb(238 47 255 / var(--tw-bg-opacity));
-}
-
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-opacity-25 {
+  --tw-bg-opacity: 0.25;
 }
 
 .bg-opacity-100 {
@@ -1976,16 +1980,16 @@ input::placeholder {
   --tw-bg-opacity: 0;
 }
 
-.bg-opacity-25 {
-  --tw-bg-opacity: 0.25;
-}
-
 .bg-gradient-to-tr {
   background-image: linear-gradient(to top right, var(--tw-gradient-stops));
 }
 
 .bg-auth-splash {
   background-image: url('/images/signup_splash_edit.png');
+}
+
+.bg-\[url\(\'\/images\/cta_signup\.png\'\)\] {
+  background-image: url('/images/cta_signup.png');
 }
 
 .from-primary {
@@ -2013,6 +2017,10 @@ input::placeholder {
 
 .bg-center {
   background-position: center;
+}
+
+.bg-left {
+  background-position: left;
 }
 
 .bg-no-repeat {
@@ -2079,6 +2087,16 @@ input::placeholder {
   padding-bottom: 0.75rem;
 }
 
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -2102,16 +2120,6 @@ input::placeholder {
 .px-12 {
   padding-left: 3rem;
   padding-right: 3rem;
-}
-
-.py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-}
-
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
 }
 
 .py-4 {
@@ -2141,14 +2149,6 @@ input::placeholder {
 
 .pt-2 {
   padding-top: 0.5rem;
-}
-
-.pr-6 {
-  padding-right: 1.5rem;
-}
-
-.pb-6 {
-  padding-bottom: 1.5rem;
 }
 
 .pt-8 {
@@ -2185,6 +2185,14 @@ input::placeholder {
 
 .pr-2 {
   padding-right: 0.5rem;
+}
+
+.pr-6 {
+  padding-right: 1.5rem;
+}
+
+.pb-6 {
+  padding-bottom: 1.5rem;
 }
 
 .pr-4 {
@@ -2317,6 +2325,11 @@ input::placeholder {
   color: rgb(167 129 254 / var(--tw-text-opacity));
 }
 
+.text-tertiary {
+  --tw-text-opacity: 1;
+  color: rgb(238 47 255 / var(--tw-text-opacity));
+}
+
 .text-red-50 {
   --tw-text-opacity: 1;
   color: rgb(254 242 242 / var(--tw-text-opacity));
@@ -2325,11 +2338,6 @@ input::placeholder {
 .text-gray-100 {
   --tw-text-opacity: 1;
   color: rgb(202 188 235 / var(--tw-text-opacity));
-}
-
-.text-tertiary {
-  --tw-text-opacity: 1;
-  color: rgb(238 47 255 / var(--tw-text-opacity));
 }
 
 .text-opacity-70 {
@@ -2418,15 +2426,15 @@ input::placeholder {
   outline-offset: 0px;
 }
 
-.ring-1 {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-
 .ring-0 {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.ring-1 {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
@@ -2439,12 +2447,12 @@ input::placeholder {
   --tw-ring-opacity: 0.5;
 }
 
-.ring-opacity-20 {
-  --tw-ring-opacity: 0.2;
-}
-
 .ring-opacity-30 {
   --tw-ring-opacity: 0.3;
+}
+
+.ring-opacity-20 {
+  --tw-ring-opacity: 0.2;
 }
 
 .filter {
@@ -2621,20 +2629,20 @@ input::placeholder {
     margin-right: 0px;
   }
 
-  .md\:mt-32 {
-    margin-top: 8rem;
-  }
-
-  .md\:mb-10 {
-    margin-bottom: 2.5rem;
-  }
-
   .md\:ml-0 {
     margin-left: 0px;
   }
 
   .md\:mb-6 {
     margin-bottom: 1.5rem;
+  }
+
+  .md\:mt-32 {
+    margin-top: 8rem;
+  }
+
+  .md\:mb-10 {
+    margin-bottom: 2.5rem;
   }
 
   .md\:mt-8 {
@@ -2897,6 +2905,15 @@ input::placeholder {
     margin-bottom: calc(0px * var(--tw-space-y-reverse));
   }
 
+  .lg\:bg-\[url\(\'\/images\/cta_signup\.png\'\)\] {
+    background-image: url('/images/cta_signup.png');
+  }
+
+  .lg\:py-8 {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+  }
+
   .lg\:pb-8 {
     padding-bottom: 2rem;
   }
@@ -2913,6 +2930,15 @@ input::placeholder {
 @media (min-width: 1280px) {
   .xl\:w-1\/3 {
     width: 33.333333%;
+  }
+
+  .xl\:bg-\[url\(\'\/images\/cta_signup\.png\'\)\] {
+    background-image: url('/images/cta_signup.png');
+  }
+
+  .xl\:py-8 {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
   }
 }
 
