--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1367,6 +1367,15 @@ input::placeholder {
   height: 1rem;
 }
 
+.h-screen {
+  height: 100vh;
+}
+
+.h-max {
+  height: -moz-max-content;
+  height: max-content;
+}
+
 .h-auto {
   height: auto;
 }
@@ -1389,15 +1398,6 @@ input::placeholder {
 
 .h-3 {
   height: 0.75rem;
-}
-
-.h-max {
-  height: -moz-max-content;
-  height: max-content;
-}
-
-.h-screen {
-  height: 100vh;
 }
 
 .h-min {
@@ -1433,6 +1433,10 @@ input::placeholder {
   width: auto;
 }
 
+.w-screen {
+  width: 100vw;
+}
+
 .w-1\/2 {
   width: 50%;
 }
@@ -1448,6 +1452,10 @@ input::placeholder {
 
 .w-96 {
   width: 24rem;
+}
+
+.w-1\/5 {
+  width: 20%;
 }
 
 .w-8 {
@@ -1468,10 +1476,6 @@ input::placeholder {
 
 .w-3 {
   width: 0.75rem;
-}
-
-.w-screen {
-  width: 100vw;
 }
 
 .w-0 {
@@ -1758,6 +1762,12 @@ input::placeholder {
   margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
+.space-y-4 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+}
+
 .space-y-8 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
@@ -1770,10 +1780,10 @@ input::placeholder {
   margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
 }
 
-.space-y-4 > :not([hidden]) ~ :not([hidden]) {
+.space-y-3 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
-  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
 }
 
 .divide-x-1 > :not([hidden]) ~ :not([hidden]) {
@@ -1944,6 +1954,10 @@ input::placeholder {
   background-color: rgb(21 9 49 / var(--tw-bg-opacity));
 }
 
+.bg-primary\/50 {
+  background-color: rgb(110 47 255 / 0.5);
+}
+
 .bg-tertiary {
   --tw-bg-opacity: 1;
   background-color: rgb(238 47 255 / var(--tw-bg-opacity));
@@ -1968,6 +1982,39 @@ input::placeholder {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
+.bg-primary\/20 {
+  background-color: rgb(110 47 255 / 0.2);
+}
+
+.bg-gray-500\/20 {
+  background-color: rgb(61 36 117 / 0.2);
+}
+
+.bg-gray-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(61 36 117 / var(--tw-bg-opacity));
+}
+
+.bg-gray-500\/40 {
+  background-color: rgb(61 36 117 / 0.4);
+}
+
+.bg-gray-500\/0 {
+  background-color: rgb(61 36 117 / 0);
+}
+
+.bg-primary\/40 {
+  background-color: rgb(110 47 255 / 0.4);
+}
+
+.bg-primary\/10 {
+  background-color: rgb(110 47 255 / 0.1);
+}
+
+.bg-primary\/30 {
+  background-color: rgb(110 47 255 / 0.3);
+}
+
 .bg-opacity-25 {
   --tw-bg-opacity: 0.25;
 }
@@ -1980,12 +2027,12 @@ input::placeholder {
   --tw-bg-opacity: 0;
 }
 
-.bg-gradient-to-tr {
-  background-image: linear-gradient(to top right, var(--tw-gradient-stops));
-}
-
 .bg-\[url\(\'\/images\/signup_splash_edit\.png\'\)\] {
   background-image: url('/images/signup_splash_edit.png');
+}
+
+.bg-gradient-to-tr {
+  background-image: linear-gradient(to top right, var(--tw-gradient-stops));
 }
 
 .from-primary {
@@ -1998,12 +2045,12 @@ input::placeholder {
   --tw-gradient-to: #A781FE;
 }
 
-.bg-contain {
-  background-size: contain;
-}
-
 .bg-cover {
   background-size: cover;
+}
+
+.bg-contain {
+  background-size: contain;
 }
 
 .bg-clip-text {
@@ -2073,6 +2120,11 @@ input::placeholder {
   padding-bottom: 1.5rem;
 }
 
+.px-12 {
+  padding-left: 3rem;
+  padding-right: 3rem;
+}
+
 .py-12 {
   padding-top: 3rem;
   padding-bottom: 3rem;
@@ -2106,11 +2158,6 @@ input::placeholder {
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
-}
-
-.px-12 {
-  padding-left: 3rem;
-  padding-right: 3rem;
 }
 
 .px-5 {
@@ -2321,6 +2368,10 @@ input::placeholder {
   color: rgb(167 129 254 / var(--tw-text-opacity));
 }
 
+.text-gray-50\/100 {
+  color: rgb(248 245 255 / 1);
+}
+
 .text-tertiary {
   --tw-text-opacity: 1;
   color: rgb(238 47 255 / var(--tw-text-opacity));
@@ -2334,6 +2385,44 @@ input::placeholder {
 .text-red-50 {
   --tw-text-opacity: 1;
   color: rgb(254 242 242 / var(--tw-text-opacity));
+}
+
+.text-primary\/100 {
+  color: rgb(110 47 255 / 1);
+}
+
+.text-secondary\/100 {
+  color: rgb(167 129 254 / 1);
+}
+
+.text-gray-500\/100 {
+  color: rgb(61 36 117 / 1);
+}
+
+.text-gray-50\/80 {
+  color: rgb(248 245 255 / 0.8);
+}
+
+.text-gray-50\/50 {
+  color: rgb(248 245 255 / 0.5);
+}
+
+.text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(61 36 117 / var(--tw-text-opacity));
+}
+
+.text-gray-300 {
+  --tw-text-opacity: 1;
+  color: rgb(118 83 194 / var(--tw-text-opacity));
+}
+
+.text-primary\/80 {
+  color: rgb(110 47 255 / 0.8);
+}
+
+.text-secondary\/80 {
+  color: rgb(167 129 254 / 0.8);
 }
 
 .text-opacity-50 {
@@ -2384,16 +2473,16 @@ input::placeholder {
   opacity: 0.2;
 }
 
+.opacity-30 {
+  opacity: 0.3;
+}
+
 .opacity-50 {
   opacity: 0.5;
 }
 
 .opacity-70 {
   opacity: 0.7;
-}
-
-.opacity-30 {
-  opacity: 0.3;
 }
 
 .opacity-5 {
@@ -2444,16 +2533,16 @@ input::placeholder {
   --tw-ring-color: rgb(0 0 0 / var(--tw-ring-opacity));
 }
 
+.ring-opacity-20 {
+  --tw-ring-opacity: 0.2;
+}
+
 .ring-opacity-50 {
   --tw-ring-opacity: 0.5;
 }
 
 .ring-opacity-30 {
   --tw-ring-opacity: 0.3;
-}
-
-.ring-opacity-20 {
-  --tw-ring-opacity: 0.2;
 }
 
 .filter {
@@ -2670,12 +2759,12 @@ input::placeholder {
     display: none;
   }
 
-  .md\:h-screen {
-    height: 100vh;
-  }
-
   .md\:h-auto {
     height: auto;
+  }
+
+  .md\:h-screen {
+    height: 100vh;
   }
 
   .md\:w-1\/2 {
