--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1458,6 +1458,10 @@ input::placeholder {
   width: 20%;
 }
 
+.w-4\/5 {
+  width: 80%;
+}
+
 .w-8 {
   width: 2rem;
 }
@@ -1525,6 +1529,10 @@ input::placeholder {
 .max-w-fit {
   max-width: -moz-fit-content;
   max-width: fit-content;
+}
+
+.max-w-md {
+  max-width: 28rem;
 }
 
 .flex-1 {
@@ -2229,6 +2237,10 @@ input::placeholder {
   padding-left: 0.5rem;
 }
 
+.pr-12 {
+  padding-right: 3rem;
+}
+
 .text-left {
   text-align: left;
 }
@@ -2358,6 +2370,14 @@ input::placeholder {
   color: rgb(254 242 242 / var(--tw-text-opacity));
 }
 
+.text-gray-50\/50 {
+  color: rgb(248 245 255 / 0.5);
+}
+
+.text-gray-50\/80 {
+  color: rgb(248 245 255 / 0.8);
+}
+
 .text-opacity-50 {
   --tw-text-opacity: 0.5;
 }
@@ -2456,6 +2476,12 @@ input::placeholder {
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
+.ring-2 {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
 .ring-gray-500 {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(61 36 117 / var(--tw-ring-opacity));
@@ -2526,6 +2552,10 @@ input::placeholder {
   background-color: rgb(14 4 38 / var(--tw-bg-opacity));
 }
 
+.hover\:text-gray-50\/80:hover {
+  color: rgb(248 245 255 / 0.8);
+}
+
 .hover\:underline:hover {
   text-decoration-line: underline;
 }
@@ -2548,6 +2578,10 @@ input::placeholder {
 
 .hover\:opacity-90:hover {
   opacity: 0.9;
+}
+
+.hover\:ring-opacity-80:hover {
+  --tw-ring-opacity: 0.8;
 }
 
 .focus\:border-1:focus {
@@ -2579,6 +2613,10 @@ input::placeholder {
 
 .group:hover .group-hover\:opacity-100 {
   opacity: 1;
+}
+
+.group:hover .group-hover\:opacity-80 {
+  opacity: 0.8;
 }
 
 @media (min-width: 640px) {
